# Embedded-Sensor-Data-Processor

./: CMakeLists.txt  IO.c  IO.h  README.md  adc.c  adc.h  main.c  stats.c  stats.h
